--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ Réalisée avec le concours de l'Agence du Numérique de la Sécurité Civile
   <head>
     <meta charset="utf-8" />
     <meta name="robots" content="noindex" />
-    <title>Informations Covid-19</title>
+    <title>Questionnaire d’orientation COVID-19</title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
