Update back button URL

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ Réalisée avec le concours de l'Agence du Numérique de la Sécurité Civile
             </div>
           </article>
           <div class="gouv-button-container">
-            <a class="gouv-button" href="./index.html"><i class="fas fa-arrow-left" aria-hidden="true"></i> Retour au début</a>
+            <a class="gouv-button" href="./"><i class="fas fa-arrow-left" aria-hidden="true"></i> Retour au début</a>
           </div>
           <!---Âge -->
           <article class="step" id="age-01">
@@ -332,7 +332,7 @@ Réalisée avec le concours de l'Agence du Numérique de la Sécurité Civile
             </div>
           </article>
           <div class="gouv-button-container">
-            <a class="gouv-button" href="./index.html"><i class="fas fa-arrow-left" aria-hidden="true"></i> Retour au début</a>
+            <a class="gouv-button" href="./"><i class="fas fa-arrow-left" aria-hidden="true"></i> Retour au début</a>
           </div>
         </div>
       </main>
