--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@ Réalisée avec le concours de l'Agence du Numérique de la Sécurité Civile
                       <label for="add-taille">Taille en centimètres * :</label>
                       <input type="text" required pattern="[0-9]+" id="add-taille" data-check-number data-check-number-min="50"
                         data-check-number-max="300"
-                        data-check-number-error="Ce nombre ne semble pas être une taille en centimères valide."
+                        data-check-number-error="Ce nombre ne semble pas être une taille en centimètres valide."
                         placeholder="ex : 165" inputmode="numeric">
                     </li>
                     <li><label for="add-poids">Poids en kilogrammes * :</label><input type="text" required pattern="[0-9,.]+"
